# argos3-drone

./: README.md
src/: CMakeLists.txt
src/calibration/: drone_camera_system.xml  virtualdrone_camera_system.xml
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  FindARGoS.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/drone/: CMakeLists.txt
src/plugins/robots/drone/control_interface/: ci_drone_camera_system_sensor.cpp  ci_drone_camera_system_sensor.h
src/plugins/robots/drone/hardware/: drone.cpp  drone_camera_system_default_sensor.cpp  drone_camera_system_default_sensor.h
src/plugins/robots/virtualdrone/: CMakeLists.txt
src/plugins/robots/virtualdrone/control_interface/: ci_virtualdrone_camera_system_sensor.cpp  ci_virtualdrone_camera_system_sensor.h  ci_virtualdrone_wifi_actuator.cpp  ci_virtualdrone_wifi_actuator.h  ci_virtualdrone_wifi_sensor.cpp  ci_virtualdrone_wifi_sensor.h
src/plugins/robots/virtualdrone/hardware/: main.cpp  virtualdrone.cpp  virtualdrone.h  virtualdrone_camera_system_default_sensor.cpp  virtualdrone_camera_system_default_sensor.h  virtualdrone_wifi_default_actuator.cpp  virtualdrone_wifi_default_actuator.h  virtualdrone_wifi_default_sensor.cpp  virtualdrone_wifi_default_sensor.h
src/scripts/: gdbinit.in  setup_env.sh.in
src/testing/: network.lua  test_drone.argos
